-----------------------------------------------------------------------------------------
	$Id$
-----------------------------------------------------------------------------------------

2011-07-26	remko
	* doc/GMT_version.tex.in:	Added \GSHHSVERSION

2011-07-24	pwessel
	Now under subversion control under repository name gmt5.  To check out a copy:
		svn checkout svn://pohaku.soest.hawaii.edu/gmt5 or, for a "trunkless" copy:
		svn checkout svn://pohaku.soest.hawaii.edu/gmt5/trunk gmt5
-----------------------------------------------------------------------------------------
2011-07-21	pwessel
	* project_func.c:	Fixed same bug as in GMT 4 and added test oblique.sh

2011-07-20	pwessel
	* fitcircle_func.c:	Had not implemented the fixed small circle -S<lat> solution.
				Added test example for fitcircle.

2011-07-19	pwessel
	* sph/*.[ch]:		Upgraded to be fully 64-bit compliant.
	* gmt*.c:		Make sure we don't pass ints to funcs expecting GMT_LONG.

2011-07-18	pwessel
	* gmtstitch_func.c:	Warn that segment with a single point will not connect both
				ends properly - you will need to rerun the task on the new
				sets of segments.  We now give a warning.
	* grdhisteq_func.c:	Fixed porting bugs for -D; also allow -D<file> instead of just
				writing to stdout.

2011-07-15	pwessel
	* gmt2kml_func.c:	The -C option now also applies to lines or polygons; use
				with -W-|+ to control if cpt is used for fill, outline or
				both.  If no -W then no outline for polygons.
	* gmtconvert_func.c:	Enhanced -I[tsr] to reverse tables, segments or records,
				in any combination [Default -I becomes -Ir].

2011-07-14	pwessel
	* sph/sphtriangulate_func.c:	Passed lon,lat instead of lat,lon to GMT_geo_to_cart
				which would affect the -A option only.
	* gmt_io.c:		Try to minimize size of allocations/reallocations in GMT_read_table
				by adjusting to actual segment sizes found.
-----------------------------------------------------------------------------------------
2011-07-14	pwessel